# qtjack_midi_debugger

./: .gitignore  CMakeLists.txt  README.md  qt_jack_midi_debugger.qrc  qtjack_midi_debugger.qrc
cmake/: FindRTMidi.cmake
include/: jackmidi.hpp  mainwindow.hpp  messagehistory.hpp  midimsg_store.hpp  qtjack_mainwindow.hpp
src/: jackmidi.cpp  main.cpp  main_app.cpp  main_cli.cpp  mainwindow.cpp  mainwindow.ui  messagehistory.cpp  midimsg_store.cpp  qtjack_main_app.cpp  qtjack_mainwindow.cpp
